--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <title>Escrollade</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <div id="scene1" class="size py-5 text-center text-white font-weight-bold text-uppercase">MONTAGNE 1</div>
-        <div id="scene2" class="size2 py-5 text-center text-white font-weight-bold text-uppercase">MONTAGNE 2</div>
-        <div id="scene3" class="size3 py-5 text-center text-white font-weight-bold text-uppercase">MONTAGNE 3</div>
+        <div id="scene1" class="size py-5 text-center text-white font-weight-bold text-uppercase"></div>
+        <div id="scene2" class="size2 py-5 text-center text-white font-weight-bold text-uppercase"></div>
+        <div id="scene3" class="size3 py-5 text-center text-white font-weight-bold text-uppercase"></div>
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
